--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,8 +7,8 @@
 
 <form action="{{ url_for('login') }}" method="post">
     <div>
-        <label for="username">Benutzername</label>
-        <input type="text" id="username" name="username" required>
+        <label for="email">E-Mail</label>
+        <input type="email" id="email" name="email" required>
     </div>
 
     <div>
