--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,8 +7,18 @@
 
 <form action="{{ url_for('register') }}" method="post">
     <div>
-        <label for="username">Benutzername</label>
-        <input type="text" id="username" name="username" required>
+        <label for="vorname">Vorname</label>
+        <input type="text" id="vorname" name="vorname" required>
+    </div>
+
+    <div>
+        <label for="nachname">Nachname</label>
+        <input type="text" id="nachname" name="nachname" required>
+    </div>
+
+    <div>
+        <label for="email">E-Mail</label>
+        <input type="email" id="email" name="email" required>
     </div>
 
     <div>
