--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,8 +33,8 @@
         <ul class="nav-links">
           {% if 'user_id' in session %}
             <li><a href="{{ url_for('index') }}">Startseite</a></li>
-            {# Platzhalter für später:
             <li><a href="{{ url_for('ad_new') }}">Neue Anzeige</a></li>
+            {# Platzhalter für später:
             <li><a href="{{ url_for('my_ads') }}">Meine Anzeigen</a></li>
             #}
             <li><a href="{{ url_for('logout') }}">Abmelden</a></li>
@@ -45,6 +45,19 @@
         </ul>
       </nav>
     </header>
+
+    {# für die Flash-Messages #}
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class="flash-messages">
+          {% for message in messages %}
+            <li class="flash-message">{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+
+    {# Extended Hauptinhalt folgt hier #}
 
     {% block content %}
     {% endblock %}
