--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,10 +47,18 @@
               </a>
             </li>
 
-            {# Admin-Dashboard, sofern die Rechte vorhanden #}
+            {# Admin-Dashboard mit Pending-Ads Counter #}
             {% if session.get('rolle') in ['admin', 'redakteur'] %}
-              <li><a href="{{ url_for('admin_dashboard') }}">Admin-Dashboard</a></li>
+              <li>
+                <a href="{{ url_for('admin_dashboard') }}">
+                  Admin-Dashboard
+                  {% if pending_ads_count and pending_ads_count > 0 %}
+                    ({{ pending_ads_count }})
+                  {% endif %}
+                </a>
+              </li>
             {% endif %}
+
 
             <li><a href="{{ url_for('logout') }}">Abmelden</a></li>
           {% else %}
