Add additional Comments where needed for better understanding later

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,4 +1,6 @@
 
+/* LEGACY CODE von Adoptify (Haustierverleih) -- Neues CSS weiter unten */
+
 
 html, body {                            /* Selbe Regeln für html als auch body */
   height: 100%;                         /* Damit der Body so hoch ist wie das gesamte Fenster vom Browser */
