--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -60,6 +60,6 @@
       </tbody>
     </table>
   {% else %}
-    <p>Es gibt aktuell keine ausstehenden Anzeigen. 🎉</p>
+    <p>Es gibt aktuell keine ausstehenden Anzeigen.</p>
   {% endif %}
 {% endblock %}
