--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -80,7 +80,7 @@
       {% endif %}
     {% endwith %}
 
-    {# Extended Hauptinhalt folgt hier #}
+    {# Extended Hauptinhalt kommts hier #}
 
     {% block content %}
     {% endblock %}
