--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
       <div class="ad-list">
         {% for ad in ads %}
           <article class="ad-card">
-            {# Ganze Karte klickbar machen #}
+            {# Ganze Karte klickidiklick machen #}
             <a class="ad-card-link" href="{{ url_for('ad_detail', ad_id=ad.ad_id) }}"></a>
 
             {% if ad.bilder_path %}
